# music-meta

./: .env.example  .gitignore  README.md  pyproject.toml
MusicMetaApp/: AppViewModel.swift  ContentView.swift  FilenameRules.swift  MP3Metadata.swift  MetadataProviders.swift  Models.swift  MusicMetaApp.swift
MusicMetaApp.xcodeproj/: project.pbxproj
src/music_meta/: cli.py  filenames.py  gui.py  matcher.py  models.py  mp3_tags.py  providers.py
tests/: test_filenames.py  test_matcher.py
